# Bot_discord_temperatura

./: README.md
DiscordCompanion/: README.md  bot.py  database_utils.py  linked-roles-verification.md  models.py  privacy-policy.md  pyproject.toml  replit.md  requirements.txt  terms-of-service.md  web_interface.py
DiscordCompanion/attached_assets/: bot_1753141519857.py
DiscordCompanion/static/: script.js  style.css
DiscordCompanion/templates/: dashboard.html  index.html
